--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -2,4 +2,9 @@
 <resources>
     <string name="app_name">Easy Math</string>
     <string name="geo_forms">Formas Geométricas</string>
+    <string name="title_activity_geometric_forms">Formas Geométricas</string>
+    <string name="square">Quadrado</string>
+    <string name="triangle">Triângulo</string>
+    <string name="herons_formula">Fórmula de Heron - Calcular área do triângulo com a medidas dos lados</string>
+    <string name="base_alture"></string>
 </resources>
