--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="title_activity_geometric_forms">Geometric Forms</string>
     <string name="square">Square</string>
     <string name="triangle">Triangle</string>
+    <string name="diamond">Diamond</string>
+    <string name="rectangle">Rectangle</string>
     <string name="title_activity_triangle_operations">Triangle</string>
     <string name="herons_formula">Calculate the area with the measures of the 3 sides</string>
     <string name="base_height">Calculate the area with the base and height</string>
@@ -31,5 +33,31 @@
     <string name="side_of_equi">Measure of the side</string>
     <string name="area_result">Area = "</string>
     <string name="height_result">Height = "</string>
+    <string name="close">Close</string>
+    <string name="title_activity_square">Square</string>
+    <string name="title_activity_diamond">Diamond</string>
+    <string name="diagonal_1">Diagonal 1</string>
+    <string name="diagonal_2">Diagonal 2</string>
+    <string name="title_activity_rectangle">Rectangle</string>
+    <string name="length">Length</string>
+    <string name="width">Width</string>
+
+
     <string name="legend">Legend</string>
+    <string name="area_legend">A = Area</string>
+    <string name="height_legend">h = Height</string>
+    <string name="base_legend">b = Base</string>
+    <string name="side_legend">l = Side</string>
+    <string name="side1_legend">a = Side 1</string>
+    <string name="side2_legend">b = Side 2</string>
+    <string name="side3_legend">c = Side 3</string>
+    <string name="semi_perimeter_legend">p = Semi-Perimeter</string>
+    <string name="alpha_legend">α = Angle</string>
+    <string name="diagonal1_legend">d = Diagonal 1</string>
+    <string name="diagonal2_legend">D = Diagonal 2</string>
+    <string name="length_legend">a = Length</string>
+    <string name="width_legend">b = Width</string>
+
+
+
 </resources>
