--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="triangle">Triangle</string>
     <string name="diamond">Diamond</string>
     <string name="rectangle">Rectangle</string>
+    <string name="circle">Circle</string>
     <string name="title_activity_triangle_operations">Triangle</string>
     <string name="herons_formula">Calculate the area with the measures of the 3 sides</string>
     <string name="base_height">Calculate the area with the base and height</string>
@@ -41,6 +42,14 @@
     <string name="title_activity_rectangle">Rectangle</string>
     <string name="length">Length</string>
     <string name="width">Width</string>
+    <string name="diameter_area_circle">Calculate the diameter and area</string>
+    <string name="sector_circle">Calculate a sector of a circle</string>
+    <string name="title_activity_circle_operations">Circle</string>
+    <string name="diameter_result">Diameter = "</string>
+    <string name="radius">Radius of the circle</string>
+    <string name="title_activity_circle_diameter_area">Diameter and Area</string>
+
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 
 
     <string name="legend">Legend</string>
@@ -57,6 +66,9 @@
     <string name="diagonal2_legend">D = Diagonal 2</string>
     <string name="length_legend">a = Length</string>
     <string name="width_legend">b = Width</string>
+    <string name="diameter_legend">D = Diameter</string>
+    <string name="radius_legend">r = Radius</string>
+    <string name="pi_legend">π = PI</string>
 
 
 
